--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,5 +1,8 @@
 # see https://symfony.com/doc/current/reference/configuration/framework.html
 framework:
+    serializer:
+        mapping:
+            path: ['%kernel.project_dir%/config/serialization']
     secret: '%env(APP_SECRET)%'
     #csrf_protection: true
     http_method_override: false
