--- a/config/api_platform/resources/product.yaml
+++ b/config/api_platform/resources/product.yaml
@@ -2,9 +2,9 @@ App\Entity\Product:
   collectionOperations:
     get:
       normalization_context:
-        groups: [ 'product:item:get' ]
-    list:
+        groups: [ 'product:collection:get']
+  itemOperations:
+    get:
       normalization_context:
-        groups: ['product:collection:get']
-
+        groups: [ 'product:item:get' ]
 
