--- a/config/serialization/customer.yaml
+++ b/config/serialization/customer.yaml
@@ -1,27 +1,27 @@
 App\Entity\Customer:
   attributes:
     id:
-      groups: ['customer.yaml:item:get']
+      groups: ['customer:item:get']
     company:
-      groups: [ 'customer.yaml:item:get', 'customer.yaml:collection:get', 'customer.yaml:item:post']
+      groups: [ 'customer:item:get', 'customer:collection:get', 'customer:item:post']
     lastname:
-      groups: [ 'customer.yaml:item:get', 'customer.yaml:collection:get', 'customer.yaml:item:post' ]
+      groups: [ 'customer:item:get', 'customer:collection:get', 'customer:item:post' ]
     firstname:
-      groups: [ 'customer.yaml:item:get', 'customer.yaml:collection:get', 'customer.yaml:item:post' ]
+      groups: [ 'customer:item:get', 'customer:collection:get', 'customer:item:post' ]
     address:
-      groups: [ 'customer.yaml:item:get', 'customer.yaml:collection:get', 'customer.yaml:item:post' ]
+      groups: [ 'customer:item:get', 'customer:collection:get', 'customer:item:post' ]
     city:
-      groups: [ 'customer.yaml:item:get', 'customer.yaml:collection:get', 'customer.yaml:item:post' ]
+      groups: [ 'customer:item:get', 'customer:collection:get', 'customer:item:post' ]
     phoneNumber:
-      groups: [ 'customer.yaml:item:get', 'customer.yaml:collection:get', 'customer.yaml:item:post' ]
+      groups: [ 'customer:item:get', 'customer:collection:get', 'customer:item:post' ]
     country:
-      groups: [ 'customer.yaml:item:get', 'customer.yaml:collection:get', 'customer.yaml:item:post' ]
+      groups: [ 'customer:item:get', 'customer:collection:get', 'customer:item:post' ]
     postalCode:
-      groups: [ 'customer.yaml:item:get', 'customer.yaml:collection:get', 'customer.yaml:item:post' ]
+      groups: [ 'customer:item:get', 'customer:collection:get', 'customer:item:post' ]
     email:
-      groups: [ 'customer.yaml:item:get', 'customer.yaml:collection:get', 'customer.yaml:item:post' ]
+      groups: [ 'customer:item:get', 'customer:collection:get', 'customer:item:post' ]
     users:
-      groups: ['customer.yaml:collection:post', 'customer.yaml:item:get','customer.yaml:item:put', 'customer.yaml:collection:get']
+      groups: [ 'customer:item:get', 'user:collection:post', 'customer:collection:get']
 
 
 
