post new user ok have to implement it with authentificated customer

--- a/config/api_platform/resources/user.yaml
+++ b/config/api_platform/resources/user.yaml
@@ -1,5 +1,8 @@
 App\Entity\User:
   collectionOperations:
+    get:
+      normalization_context:
+        groups: [ 'user:item:get' ]
     register:
       method: POST
       input: App\Dto\CreateUser
