--- a/config/serialization/user.yaml
+++ b/config/serialization/user.yaml
@@ -1,12 +1,12 @@
 App\Entity\User:
   attributes:
     id:
-      groups: ['user:item:get', 'customer:item:get']
-    email:
-      groups: ['user:item:get', 'user:collection:post' ,'customer:item:get']
-    username:
-      groups: ['user:item:get', 'user:collection:post', 'customer:item:get']
-    password:
-      groups: ['user:collection:post']
-    customer:
       groups: ['user:item:get']
+    email:
+      groups: ['user:item:get', 'user:collection:post']
+    username:
+      groups: ['user:item:get', 'user:collection:post']
+    password:
+      groups: ['user:item:get']
+    customer:
+      groups: ['user:item:get', 'user:collection:post']
