have set up access rules & post & delete user By auth Customer with JWT right access

--- a/config/api_platform/resources/customer.yaml
+++ b/config/api_platform/resources/customer.yaml
@@ -3,7 +3,11 @@ App\Entity\Customer:
     get:
       normalization_context:
         groups: [ 'customer:collection:get' ]
+      security:
+          'is_granted("ROLE_USER")'
   itemOperations:
       get:
         normalization_context:
           groups: ['customer:item:get']
+        security:
+          'is_granted("ROLE_USER")'
