--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -12,12 +12,12 @@ security:
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
+            security: true
         api:
             pattern: ^/api/
             stateless: true
             jwt: ~
-        login:
+        main:
             stateless: true
             provider: app_user_provider
             json_login:
