--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,4 +1,6 @@
 api_platform:
+    defaults:
+        pagination_items_per_page: 5
     mapping:
         paths: ['%kernel.project_dir%/config/api_platform/resources']
     patch_formats:
